--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.0.27",
+    "gsap": "^3.10.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
